tests/paczka1/fuzzy1/34401674.err
Error in line 3: P5pizwLdAk S987 54,4
Error in line 17: S987 A735 25,19
Error in line 18: 0Zjk S987 110,6
Error in line 21: 0Zjk S812 94,5
Error in line 12: S987 A735 20,7
Error in line 29: uFTOe S812 98,4
